Update style.scss with mobile enhancements and change the screenshot photo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               aria-label="search-input"
               required
             />
-            <button class="button" type="submit">Search</button>
+            <button class="button button-search" type="submit">Search</button>
           </form>
         </div>
         <div class="loader hidden"></div>
